--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
 /*変数*/
 :root {
-	--basecolor: #F24949; /* 基本色 */
+	--basecolor:#41A9A5;
     --basebgcolor: #FFE8E8; /* 基本背景色 */
     --textcolor: #333333; /* 基本文字色 */
     --backgroundcolor: rgba(93, 122, 166, 0.05);
     --backgroundaccentcolor: rgba(255, 232, 232, 1);
-
-	--gradient: linear-gradient( 79.7deg,  rgba(76,131,255,1) 8.2%, rgba(42,250,233,1) 84.9% ); 
 
 	--myfont: 'Noto Sans JP', sans-serif;
 
@@ -26,12 +24,12 @@ body {
 }
 .mycontents-wide{
     max-width: var(--myw);
-    padding: 0 80px;
+    padding: 0 65px;
     margin: 0 auto;
 }
 .mycontents{
-    max-width:  calc(var(--myw) - 240px);
-    padding: 0 120px;
+    max-width: var(--myw);
+    padding: 0 100px;
     margin: 0 auto;
 }
 .aligin-wide{
