--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	--basecolor:#41A9A5;
     --basebgcolor: #FFE8E8; /* 基本背景色 */
     --textcolor: #333333; /* 基本文字色 */
-    --backgroundcolor: rgba(93, 122, 166, 0.05);
+    --backgroundcolor: #FAF7F3;
     --backgroundaccentcolor: rgba(255, 232, 232, 1);
 
 	--myfont: 'Noto Sans JP', sans-serif;
