--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,44 @@ hr {
 
 /*見出し*/
 
+.sec-title {
+    position: relative;
+    font-size: 30px;
+    line-height: 62px;
+    height: 77px;
+}
+
+.sec-title::before {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: calc(100% + (100vw - 100%)/2);
+    height: 1px;
+    bottom: 0;
+    left: calc((100% - 100vw)/2);
+    background-color: #E5DFD7;
+}
+
+.sec-title::after {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: 100px;
+    height: 4px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--basecolor);
+}
+
+.sec-title__accent {
+    font-weight: bold;
+    font-size: 48px;
+    font-family: var(--accent-font);
+    line-height: 62px;
+    letter-spacing: 0.05em;
+    color: var(--basecolor);
+}
+
 /*btn*/
 
 .wide-btn {
@@ -81,6 +119,6 @@ hr {
     background-color: var(--basecolor);
 }
 
-.wide-btn span{
+.wide-btn span {
     font-family: var(--accent-font);
 }
