--- a/css/main.css
+++ b/css/main.css
@@ -161,6 +161,18 @@
 .sec-title_what {
     padding-top: 44px;
     margin-bottom: 70px;
+    height: 146px;
+}
+
+.sec-title::before{
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: calc(100% + (100vw - 100%)/2 + 80px);
+    height: 1px;
+    bottom: 0;
+    left: calc((100% - 100vw)/2 - 80px);
+    background-color: #E5DFD7;
 }
 
 .what__contents__contents {
