--- a/css/main.css
+++ b/css/main.css
@@ -591,3 +591,117 @@
     padding: 0 170px 0 190px;
     margin: 0 auto;
 }
+
+/*faq*/
+
+.faq {
+    position: relative;
+     padding: 0 190px;
+    padding-top: 60px;
+    margin-bottom: 118px;
+}
+
+.faq::before {
+    content: "";
+    position: absolute;
+    height: calc(100% - 30px);
+    top: 0;
+    left: calc((100% - 100vw) / 2);
+    width: calc(100% - 100px + (100vw - 100%) / 2);
+    background: #FAF7F3;
+    border-radius: 0px 10px 10px 0px;
+    z-index: 3;
+}
+
+.faq__contetns {
+    position: relative;
+    margin-bottom: 60px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    z-index: 5;
+}
+
+.sec-title_faq {
+    margin-bottom: 60px;
+}
+
+.faq__contetns__list {
+    width: calc((100% - 100px) / 2);
+    position: relative;
+    margin-bottom: 30px;
+    padding-bottom: 12px;
+}
+
+.faq__contetns__list::after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 1px;
+    width: 100%;
+    background-color: #CFC6B9;
+}
+
+.faq__contetns__list__text {
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 23px;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0.05em;
+}
+
+.faq__contetns__list__text::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "Q.";
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 29px;
+    letter-spacing: 0.05em;
+    color: var(--basecolor);
+}
+
+.faq__contetns__list__btn {
+    margin: 0 0 0 auto;
+    display: block;
+    position: relative;
+    padding-left: 25px;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    text-decoration-line: underline;
+}
+
+.faq__contetns__list__btn__plus_1 {
+    position: absolute;
+    display: inline-block;
+    top: 4px;
+    left: 7px;
+    height: 15px;
+    width: 1px;
+    background-color: var(--textcolor);
+}
+
+.faq__contetns__list__btn__plus_2 {
+    position: absolute;
+    display: inline-block;
+    top: 11px;
+    left: 0px;
+    width: 15px;
+    height: 1px;
+    background-color: var(--textcolor);
+}
+
+.faq__contetns__list_active .faq__contetns__list__btn__plus_2 {
+    transform: rotate(180deg);
+}
+
+.faq__contetns__list_active .faq__contetns__list__btn__plus_1 {
+    transform: rotate(90deg);
+}
