--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,49 @@ hr {
 .wide-btn span {
     font-family: var(--accent-font);
 }
+
+/*info*/
+
+.info {
+    padding: 113px 0;
+    background-image: url(../img/sample/info-bg.jpg);
+    text-align: center;
+}
+
+.info__text {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    color: var(--textcolor);
+    margin-bottom: 61px;
+}
+
+.info__btn__base {
+    margin-right: 70px;
+    display: inline-block;
+    width: 240px;
+    height: 62px;
+    border-radius: 31px;
+    background-color: var(--basecolor);
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 62px;
+    letter-spacing: 0.05em;
+}
+
+.info__btn__white {
+    display: inline-block;
+    width: 240px;
+    height: 62px;
+    border-radius: 31px;
+    background-color: #fff;
+    color: var(--basecolor);
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 60px;
+    letter-spacing: 0.05em;
+    border: 3px solid var(--basecolor);
+}
