--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ hr {
 .sec-title__accent {
     display: inline-block;
     font-weight: bold;
+    margin-right: 20px;
     font-size: 48px;
     font-family: var(--accent-font);
     line-height: 62px;
@@ -108,6 +109,7 @@ hr {
 
 .sec-title__accent_black {
     color: var(--textcolor);
+    margin-right: 0;
 }
 
 .sec-title__subtitle {
