--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,7 @@
 .gallery__contents__list {
     position: relative;
     width: 900px;
-    padding: 20px 0 30px 30px;
+    padding: 20px 0 15px 30px;
     background: #FFFFFF;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
     border-radius: 10px;
@@ -405,7 +405,7 @@
 
 .gallery__contents__list__about__left__img {
     margin-left: -30px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     width: 100%;
     height: 227px;
     object-fit: cover;
@@ -559,10 +559,10 @@
 
 .gallery__btns {
     margin-bottom: 138px;
+    margin-right: 70px;
     position: relative;
     z-index: 5;
     text-align: right;
-    padding-left: 70px;
 }
 
 .gallery__btns__btn {
@@ -625,7 +625,7 @@
 
 .faq__contetns {
     position: relative;
-    margin-bottom: 60px;
+    margin-bottom: 40px;/*60- 20*/
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
